fix: fix securrity issues

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-# Identificación del proyecto en SonarCloud
+# Identificación
 sonar.projectKey=marcoslozina_template-service
 sonar.organization=marcoslozina
 sonar.host.url=https://sonarcloud.io
@@ -7,11 +7,11 @@ sonar.token=${env.SONAR_TOKEN}
 # Código fuente y tests
 sonar.sources=domain/src/main/java,adapters/in/rest/src/main/java
 sonar.tests=domain/src/test/java,adapters/in/rest/src/test/java
-sonar.java.binaries=build/classes
+sonar.java.binaries=domain/build/classes,adapters/in/rest/build/classes
 
 # Exclusiones
 sonar.exclusions=**/build/**,**/resources/**,**/*.kt
 sonar.coverage.exclusions=**/Application.java
 
-# Reporte de cobertura generado por Jacoco
+# Cobertura
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
