fix: fix sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,20 @@
-# Identificación
+# ? Identificación del proyecto en SonarCloud
 sonar.projectKey=marcoslozina_template-service
 sonar.organization=marcoslozina
 sonar.host.url=https://sonarcloud.io
 sonar.token=${env.SONAR_TOKEN}
 
-# Código fuente y tests
+# ? Código fuente y tests
 sonar.sources=domain/src/main/java,adapters/in/rest/src/main/java
 sonar.tests=domain/src/test/java,adapters/in/rest/src/test/java
-sonar.java.binaries=domain/build/classes,adapters/in/rest/build/classes
+sonar.java.binaries=domain/build/classes/java/main,adapters/in/rest/build/classes/java/main
 
-# Exclusiones
+# ? Exclusiones generales
 sonar.exclusions=**/build/**,**/resources/**,**/*.kt
 sonar.coverage.exclusions=**/Application.java
 
-# Cobertura
+# ? Cobertura de tests con Jacoco
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
+
+# ? Comparación con código nuevo (esto habilita análisis "New Code")
+sonar.newCode.referenceBranch=main
