--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,14 +60,15 @@ jobs:
       ##############################################################
 
       - name: SonarCloud Analysis
-        uses: SonarSource/sonarcloud-github-action@v5
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
         with:
+          projectBaseDir: .
           args: >
             -Dsonar.projectKey=marcoslozina_java-springboot-reactive-hexagonal-multimodule-template
             -Dsonar.organization=marcoslozina
-            -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
 
       ##############################################################
